Minor changes Fixed top player's timer being covered by time banner Updated the lead chage notification language

--- a/game.css
+++ b/game.css
@@ -193,11 +193,15 @@ body {
 
 .player-timers {
     position: absolute;
-    top: 20px;
+    top: 50px;
     right: 20px;
     display: flex;
     flex-direction: column;
     gap: 5px;
+}
+
+.bottom .player-timers {
+    top: 20px;
 }
 
 .timer-badge {
